Existing filetree brief overview

--- a/2017-06-28-debian-post-install.org
+++ b/2017-06-28-debian-post-install.org
@@ -25,6 +25,29 @@ tags: [post-installation, arrangement, automation]
 
 * FileTree extension
 
+  On my point of view the most convenient place to put some shared
+  data on your ~Debian 9~ host is =/usr/local/share/=
+
+  #+BEGIN_SRC sh
+  ls -la /usr/local/share/
+  #+END_SRC
+
+  #+RESULTS:
+  #+begin_example
+  total 52
+  drwxrwsr-x 13 root   staff  4096 Jul 21 12:04 .
+  drwxrwsr-x 10 root   staff  4096 Jul 10 15:22 ..
+  drwxr-sr-x  3 root   staff  4096 Jul 21 12:04 anki
+  drwxr-sr-x  2 root   staff  4096 Aug  2 06:31 applications
+  drwxrwsr-x  2 root   staff  4096 Jun 20 04:18 ca-certificates
+  drwxrwsr-x  4 root   staff  4096 Jul 10 17:23 emacs
+  drwxrwsr-x  2 root   staff  4096 Jun 20 04:18 fonts
+  drwxrwsr-x  3 root   staff  4096 Jul 21 12:04 man
+  drwxr-sr-x  2 root   staff  4096 Jul 21 12:04 pixmaps
+  drwxrwsr-x  7 root   staff  4096 Jul 10 15:22 sgml
+  drwxrwsr-x  6 root   staff  4096 Jul 10 15:22 xml
+#+end_example
+
 * Software development environment configuring
 
 * Testing
