--- a/2017-06-28-debian-post-install.org
+++ b/2017-06-28-debian-post-install.org
@@ -21,6 +21,10 @@ tags: [post-installation, arrangement, automation]
   install it on a new host. As the current environment is homely and
   handy to use thus the aim is ~just to replicate~ it.
 
+* Kernel modules
+
+* HDD health check-up
+
 * Software installation
 
   #+BEGIN_SRC sh
