The twelve-factor app definition

--- a/2017-06-19-what-is-docker.org
+++ b/2017-06-19-what-is-docker.org
@@ -52,3 +52,71 @@ tags: [docker, container, intro]
    - Infrastructure and Application Metrics
 
 
+* The Twelve-Factor App
+
+  is a methodology for building software-as-a-service apps that fit
+  into these:
+
+** Requirements declaration points
+
+   - Use declarative formats for setup automation, to minimize time and
+     cost for new developers joining the project
+   - Have a clean contract with the underlying operating system,
+     offering maximum portability between execution environments
+   - Are suitable for development on modern cloud platforms, obviating
+     the need for servers and system administration
+   - Minimize divergence between development and production, enabling
+     continuous deployment for maximum agility
+   - And can scale up without significant changes to tooling,
+     architecture, or development practices
+
+
+** Codebase
+
+   One codebase tracked in revision control, many deploys
+
+** Dependencies
+
+   Explicitly declare and isolate dependencies
+
+** Config
+
+   Store config in the environment
+
+** Build, release, run
+
+   Strictly separate build and run stages
+
+** Processes
+
+   Execute the app as one or more stateless processes
+
+** Port binding
+
+   Export services via port binding
+
+** Concurrency
+
+   Scale out via the process model
+
+** Disposability
+
+   Maximize robustness with fast start-up and graceful shutdown
+
+** Dev/prod parity
+
+   Keep development, staging and production as similar as possible
+
+** Logs
+
+   Treat logs as event streams
+
+** Admin processes
+
+   Run admin/management tasks as one-off processes
+
+
+* The Ultimate Goal
+
+  A single deployable file, which is under version control, verified
+  by checksum and simply runs without any additional dependencies.
