--- a/2017-07-02-met-maria-db.org
+++ b/2017-07-02-met-maria-db.org
@@ -16,6 +16,35 @@ tags: [post-installation, configuration]
 
 * Overview
 
+  #+BEGIN_EXAMPLE
+  MariaDB [(none)]> show databases;
+  +--------------------+
+  | Database           |
+  +--------------------+
+  | information_schema |
+  | mysql              |
+  | performance_schema |
+  +--------------------+
+  3 rows in set (0.06 sec)
+  
+  MariaDB [(none)]> create database fujitsu_db;
+  Query OK, 1 row affected (0.02 sec)
+  
+  MariaDB [(none)]> show databases;
+  +--------------------+
+  | Database           |
+  +--------------------+
+  | fujitsu_db         |
+  | information_schema |
+  | mysql              |
+  | performance_schema |
+  +--------------------+
+  4 rows in set (0.00 sec)
+  
+  MariaDB [(none)]> GRANT ALL ON fujitsu_db.* TO 'alioth'@'localhost';
+  Query OK, 0 rows affected (0.09 sec)
+  #+END_EXAMPLE
+
 * Test DB creation
 
 * Dumb DB user creation
