--- a/2017-07-02-met-maria-db.org
+++ b/2017-07-02-met-maria-db.org
@@ -27,7 +27,7 @@ tags: [post-installation, configuration]
     - Open bugs database
 
 
-  *Thus, just open-source MySQL*  
+  *Thus, just open-source kind of MySQL*  
 
   #+BEGIN_EXAMPLE
   ~# mariadb
